--- a/language/i18n_ar.json
+++ b/language/i18n_ar.json
@@ -4025,5 +4025,25 @@
     "CL_DV_DW_water_energy": "المياه والطاقة",
     "CL_DV_DW_light_display": "الإضاءة والعرض",
     "CL_DV_HOB_how_to_connect_accessories": "كيفية توصيل الملحقات",
-    "CL_CF_SK_amount_of_servings": "كمية الحصص"
+    "CL_CF_SK_amount_of_servings": "كمية الحصص",
+    "CL_CF_CS_name_duplicate_tip": "اسم الجهاز موجود بالفعل",
+    "CL_DV_OV_your_oven_is_offline": "الفرن الخاص بك غير متصل بالإنترنت",
+    "CL_DV_OV_offline_tips": "لا يمكن استخدام بعض الوظائف عندما يكون الفرن غير متصل بالإنترنت. حاول إعادة توصيل الفرن.",
+    "CL_DV_OV_combi": "كومبي",
+    "share_account": "الحسابات المشتركة",
+    "CL_CF_CS_bio24_creft_setup_setp1": "قم بتشغيل الفرن. اضغط على النقاط الثلاث **** في الزاوية اليسرى من شاشة الفرن لفتح قائمة الوصول المباشر.",
+    "CL_CF_CS_bio24_creft_setup_setp2": "افتح قائمة الإعدادات بالضغط على أيقونة **** الموجودة على اليمين.",
+    "CL_CF_CS_bio24_creft_setup_setp3": "قم بالتمرير لأسفل قائمة الإعدادات حتى ترى \"الاتصال\". اضغط للدخول إلى قائمة الاتصال.",
+    "CL_CF_CS_bio24_creft_setup_setp4": "اضغط على \"توصيل الفرن\".",
+    "CL_CF_CS_bio24_creft_setup_setp5": "اضغط على زر التبديل الموجود على اليمين لتشغيل Wi-Fi.",
+    "CL_CF_CS_bio24_creft_setup_setp6": "يظهر زر \"CONNECT\"، اضغط عليه. يمكنك الآن المتابعة في التطبيق من خلال النقر على زر \"NEXT\" أدناه.",
+    "CL_CF_CS_bio24_creft_pair_step4": "اضغط على ''CONNECT USER''.",
+    "CL_CF_CS_bio24_creft_pair_step5": "اضغط على زر \"\"PAIR\"\"",
+    "CL_CF_CS_bio24_creft_pair_step6": "يبدأ العد التنازلي. يمكنك الآن المتابعة في التطبيق بالضغط على زر التالي أدناه.",
+    "CL_CF_CS_bio24_elements_setup_step1": "قم بتشغيل الفرن. افتح قائمة الإعدادات بالضغط على أيقونة **** في الزاوية اليسرى العليا.",
+    "CL_CF_CS_bio24_elements_setup_step2": "قم بالتمرير لأسفل قائمة الإعدادات حتى ترى \"الاتصال\". اضغط للدخول إلى قائمة الاتصال.",
+    "CL_CF_CS_bio24_elements_setup_step3": "اضغط على \"CONNECT OVEN\" على الجانب الأيسر. عندما تفتح القائمة، اضغط على زر التبديل على اليمين لتمكين Wi-Fi.",
+    "CL_CF_CS_bio24_elements_setup_step4": "يظهر زر \"CONNECT\"، اضغط عليه. يمكنك الآن المتابعة في التطبيق من خلال النقر على زر \"NEXT\" أدناه.",
+    "CL_CF_CS_bio24_elements_pair_step3": "اضغط على \"CONNECT USER\" على الجانب الأيسر. عندما تفتح القائمة، اضغط على زر \"PAIR\". يمكنك الآن المتابعة في التطبيق من خلال النقر على زر \"NEXT\" أدناه.",
+    "CL_DV_RF_scan_login_code_invalid": "رمز تسجيل الدخول QR غير صالح!"
 }
