--- a/language/i18n_de.json
+++ b/language/i18n_de.json
@@ -4025,5 +4025,25 @@
     "CL_DV_DW_water_energy": "Wasser & Energie",
     "CL_DV_DW_light_display": "Licht & Anzeige",
     "CL_DV_HOB_how_to_connect_accessories": "So schließen Sie Zubehör an",
-    "CL_CF_SK_amount_of_servings": "Anzahl der Portionen"
+    "CL_CF_SK_amount_of_servings": "Anzahl der Portionen",
+    "CL_CF_CS_name_duplicate_tip": "Der Gerätename ist bereits vorhanden.",
+    "CL_DV_OV_your_oven_is_offline": "Ihr Ofen ist offline",
+    "CL_DV_OV_offline_tips": "Einige Funktionen können nicht genutzt werden, wenn der Ofen offline ist. Versuchen Sie, Ihren Ofen erneut anzuschließen.",
+    "CL_DV_OV_combi": "Kombi",
+    "share_account": "GEMEINSAME KONTEN",
+    "CL_CF_CS_bio24_creft_setup_setp1": "Schalten Sie Ihren Backofen ein. Drücken Sie auf die drei Punkte **** in der linken Ecke des Backofendisplays, um das Direktzugriffsmenü zu öffnen.",
+    "CL_CF_CS_bio24_creft_setup_setp2": "Öffnen Sie das Einstellungsmenü, indem Sie rechts auf das ****-Symbol drücken.",
+    "CL_CF_CS_bio24_creft_setup_setp3": "Scrollen Sie im Menü „Einstellungen“ nach unten, bis „VERBINDEN“ angezeigt wird. Drücken Sie , um das Menü „VERBINDEN“ aufzurufen.",
+    "CL_CF_CS_bio24_creft_setup_setp4": "Drücken Sie auf „OFEN VERBINDEN“.",
+    "CL_CF_CS_bio24_creft_setup_setp5": "Drücken Sie den Umschaltknopf rechts, um das WLAN einzuschalten.",
+    "CL_CF_CS_bio24_creft_setup_setp6": "Es erscheint die Schaltfläche „VERBINDEN“. Drücke auf diese Schaltfläche. Du kannst nun in der App fortfahren, indem du unten auf die Schaltfläche WEITER tippst.",
+    "CL_CF_CS_bio24_creft_pair_step4": "Drücken Sie auf „BENUTZER VERBINDEN“.",
+    "CL_CF_CS_bio24_creft_pair_step5": "Drücken Sie die Schaltfläche „PAIR“.",
+    "CL_CF_CS_bio24_creft_pair_step6": "Ein Countdown startet. Du kannst nun in der App fortfahren, indem du unten auf die Schaltfläche WEITER tippst.",
+    "CL_CF_CS_bio24_elements_setup_step1": "Schalten Sie Ihren Ofen ein. Öffnen Sie das Einstellungsmenü, indem Sie oben links auf das ****-Symbol drücken.",
+    "CL_CF_CS_bio24_elements_setup_step2": "Scrollen Sie im Menü „Einstellungen“ nach unten, bis „Konnektivität“ angezeigt wird. Drücken Sie , um das Menü „Konnektivität“ aufzurufen.",
+    "CL_CF_CS_bio24_elements_setup_step3": "Drücken Sie auf der linken Seite auf „OFEN VERBINDEN“. Wenn das Menü geöffnet wird, drücken Sie auf den Umschaltknopf rechts, um WLAN zu aktivieren.",
+    "CL_CF_CS_bio24_elements_setup_step4": "Es erscheint die Schaltfläche „VERBINDEN“. Drücke auf diese Schaltfläche. Du kannst nun in der App fortfahren, indem du unten auf die Schaltfläche WEITER tippst.",
+    "CL_CF_CS_bio24_elements_pair_step3": "Drücken Sie auf der linken Seite auf „BENUTZER VERBINDEN“. Wenn sich das Menü öffnet, drücken Sie auf die Schaltfläche „KOPPELN“. Sie können nun in der App fortfahren, indem Sie unten auf die Schaltfläche WEITER tippen.",
+    "CL_DV_RF_scan_login_code_invalid": "Ungültiger Login-QR-Code!"
 }
