--- a/language/i18n_en.json
+++ b/language/i18n_en.json
@@ -377,7 +377,7 @@
     "loading": "Loading",
     "days": "days",
     "conform_delete_account": "We are sorry that you do not want to use ConnectLife anymore. By selecting “delete account” all your user data and all your appliance pairings will be deleted. All usage related data will be aggregated and anonymized.",
-    "delete_account_sorry": "We're sorry to see you go!",
+    "delete_account_sorry": "We are sorry to see you go!",
     "room_edit": "Room Edit",
     "add_appliance_no_name": "no name",
     "setting_vegetarian": "Vegetarian",
@@ -4025,5 +4025,25 @@
     "CL_DV_DW_water_energy": "Water & Energy",
     "CL_DV_DW_light_display": "Light & Display",
     "CL_DV_HOB_how_to_connect_accessories": "How-To Connect Accessories",
-    "CL_CF_SK_amount_of_servings": "Amount of servings"
+    "CL_CF_SK_amount_of_servings": "Amount of servings",
+    "CL_CF_CS_name_duplicate_tip": "Appliance name already exist",
+    "CL_DV_OV_your_oven_is_offline": "Your oven is offline",
+    "CL_DV_OV_offline_tips": "Some functionalities can’t be used when the oven is offline. Try to reconnect your oven.",
+    "CL_DV_OV_combi": "combi",
+    "share_account": "SHARED ACCOUNTS",
+    "CL_CF_CS_bio24_creft_setup_setp1": "Turn on your oven. Press on the three dots **** in the left corner of the oven display to open the Direct Access Menu.",
+    "CL_CF_CS_bio24_creft_setup_setp2": "Open the Settings menu by pressing the **** icon on the right.",
+    "CL_CF_CS_bio24_creft_setup_setp3": "Scroll down the Settings menu until you see ‘’CONNECT’’. Press to enter the CONNECT menu.",
+    "CL_CF_CS_bio24_creft_setup_setp4": "Press on ‘’CONNECT OVEN’’.",
+    "CL_CF_CS_bio24_creft_setup_setp5": "Press on the toggle button on the right to turn ON the Wi-Fi.",
+    "CL_CF_CS_bio24_creft_setup_setp6": "A button ‘’CONNECT’’ appears. Press on the button. You can now proceed in the app by tapping on the NEXT button below.",
+    "CL_CF_CS_bio24_creft_pair_step4": "Press on ‘’CONNECT USER’’.",
+    "CL_CF_CS_bio24_creft_pair_step5": "Press on the ‘’PAIR’’ button.",
+    "CL_CF_CS_bio24_creft_pair_step6": "A countdown starts. You can now proceed in the app by tapping on the NEXT button below.",
+    "CL_CF_CS_bio24_elements_setup_step1": "Turn on your oven. Open the Settings menu by pressing the **** icon in the top left corner.",
+    "CL_CF_CS_bio24_elements_setup_step2": "Scroll down the Settings menu until you see ‘’Connectivity’’. Press to enter the Connectivity menu.",
+    "CL_CF_CS_bio24_elements_setup_step3": "Press on ‘’CONNECT OVEN’’ on the left side. When the menu opens, press on the toggle button on the right to enable Wi-Fi.",
+    "CL_CF_CS_bio24_elements_setup_step4": "A button ‘’CONNECT’’ appears. Press on the button. You can now proceed in the app by tapping on the NEXT button below.",
+    "CL_CF_CS_bio24_elements_pair_step3": "Press on ‘’CONNECT USER’’ on the left side. When the menu opens, press on the ‘’PAIR’’ button. You can now proceed in the app by tapping on the NEXT button below.",
+    "CL_DV_RF_scan_login_code_invalid": "Invalid login QR code!"
 }
