--- a/language/i18n_fi.json
+++ b/language/i18n_fi.json
@@ -4025,5 +4025,25 @@
     "CL_DV_DW_water_energy": "Vesi & Energia",
     "CL_DV_DW_light_display": "Valo & näyttö",
     "CL_DV_HOB_how_to_connect_accessories": "Yhteydenpito-tarvikkeet",
-    "CL_CF_SK_amount_of_servings": "Annosten määrä"
+    "CL_CF_SK_amount_of_servings": "Annosten määrä",
+    "CL_CF_CS_name_duplicate_tip": "Laitteen nimi on jo olemassa",
+    "CL_DV_OV_your_oven_is_offline": "Uunisi on offline-tilassa",
+    "CL_DV_OV_offline_tips": "Joitakin toimintoja ei voi käyttää, kun uuni on offline-tilassa. Yritä kytkeä uuni uudelleen.",
+    "CL_DV_OV_combi": "combi",
+    "share_account": "JAETUT TILIT",
+    "CL_CF_CS_bio24_creft_setup_setp1": "Kytke uuni päälle. Avaa suorakäyttövalikko painamalla kolmea pistettä **** uunin näytön vasemmassa kulmassa.",
+    "CL_CF_CS_bio24_creft_setup_setp2": "Avaa Asetukset-valikko painamalla oikealla olevaa ****-kuvaketta.",
+    "CL_CF_CS_bio24_creft_setup_setp3": "Vieritä Asetukset-valikkoa alaspäin, kunnes näet \"CONNECT\". Paina siirtyäksesi CONNECT-valikkoon.",
+    "CL_CF_CS_bio24_creft_setup_setp4": "Paina ''CONNECT OVEN''.",
+    "CL_CF_CS_bio24_creft_setup_setp5": "Kytke Wi-Fi PÄÄLLE painamalla oikealla olevaa vaihtopainiketta.",
+    "CL_CF_CS_bio24_creft_setup_setp6": "Näkyviin tulee painike \"CONNECT\". Paina painiketta. Voit nyt jatkaa sovelluksessa napauttamalla alla olevaa SEURAAVA-painiketta.",
+    "CL_CF_CS_bio24_creft_pair_step4": "Paina ''YHDISTÄ KÄYTTÄJÄ''.",
+    "CL_CF_CS_bio24_creft_pair_step5": "Paina ''PAIR''-painiketta.",
+    "CL_CF_CS_bio24_creft_pair_step6": "Lähtölaskenta alkaa. Voit nyt jatkaa sovelluksessa napauttamalla alla olevaa SEURAAVA-painiketta.",
+    "CL_CF_CS_bio24_elements_setup_step1": "Kytke uuni päälle. Avaa Asetukset-valikko painamalla ****-kuvaketta vasemmassa yläkulmassa.",
+    "CL_CF_CS_bio24_elements_setup_step2": "Vieritä Asetukset-valikkoa alaspäin, kunnes näet \"Yhteys\". Paina siirtyäksesi Connectivity-valikkoon.",
+    "CL_CF_CS_bio24_elements_setup_step3": "Paina ''CONNECT OVEN'' vasemmalla puolella. Kun valikko avautuu, ota Wi-Fi käyttöön painamalla oikealla olevaa vaihtopainiketta.",
+    "CL_CF_CS_bio24_elements_setup_step4": "Näkyviin tulee painike \"CONNECT\". Paina painiketta. Voit nyt jatkaa sovelluksessa napauttamalla alla olevaa SEURAAVA-painiketta.",
+    "CL_CF_CS_bio24_elements_pair_step3": "Paina vasemmalla puolella ''YHDISTÄ KÄYTTÄJÄ''. Kun valikko avautuu, paina ''PAIR''-painiketta. Voit nyt jatkaa sovelluksessa napauttamalla alla olevaa SEURAAVA-painiketta.",
+    "CL_DV_RF_scan_login_code_invalid": "Virheellinen kirjautumis QR-koodi!"
 }
