--- a/language/i18n_fr.json
+++ b/language/i18n_fr.json
@@ -4025,5 +4025,25 @@
     "CL_DV_DW_water_energy": "Eau et énergie",
     "CL_DV_DW_light_display": "Lumière et affichage",
     "CL_DV_HOB_how_to_connect_accessories": "Comment connecter les accessoires",
-    "CL_CF_SK_amount_of_servings": "Nombre de portions"
+    "CL_CF_SK_amount_of_servings": "Nombre de portions",
+    "CL_CF_CS_name_duplicate_tip": "Le nom de l'appareil existe déjà",
+    "CL_DV_OV_your_oven_is_offline": "Votre four est hors ligne",
+    "CL_DV_OV_offline_tips": "Certaines fonctionnalités ne peuvent pas être utilisées lorsque le four est hors ligne. Essayez de reconnecter votre four.",
+    "CL_DV_OV_combi": "combi",
+    "share_account": "COMPTES PARTAGÉS",
+    "CL_CF_CS_bio24_creft_setup_setp1": "Allumez votre four. Appuyez sur les trois points **** dans le coin gauche de l'écran du four pour ouvrir le menu d'accès direct.",
+    "CL_CF_CS_bio24_creft_setup_setp2": "Ouvrez le menu Paramètres en appuyant sur l'icône **** à droite.",
+    "CL_CF_CS_bio24_creft_setup_setp3": "Faites défiler le menu Paramètres jusqu'à ce que vous voyiez « CONNECT ». Appuyez pour accéder au menu CONNECT.",
+    "CL_CF_CS_bio24_creft_setup_setp4": "Appuyez sur « CONNECTER LE FOUR ».",
+    "CL_CF_CS_bio24_creft_setup_setp5": "Appuyez sur le bouton bascule à droite pour activer le Wi-Fi.",
+    "CL_CF_CS_bio24_creft_setup_setp6": "Un bouton « CONNECT » apparaît. Appuyez sur le bouton. Vous pouvez maintenant continuer dans l'application en appuyant sur le bouton SUIVANT ci-dessous.",
+    "CL_CF_CS_bio24_creft_pair_step4": "Appuyez sur « CONNECTER L'UTILISATEUR ».",
+    "CL_CF_CS_bio24_creft_pair_step5": "Appuyez sur le bouton « PAIR ».",
+    "CL_CF_CS_bio24_creft_pair_step6": "Un compte à rebours démarre. Vous pouvez maintenant continuer dans l'application en appuyant sur le bouton SUIVANT ci-dessous.",
+    "CL_CF_CS_bio24_elements_setup_step1": "Allumez votre four. Ouvrez le menu Paramètres en appuyant sur l'icône **** dans le coin supérieur gauche.",
+    "CL_CF_CS_bio24_elements_setup_step2": "Faites défiler le menu Paramètres jusqu'à ce que vous voyiez « Connectivité ». Appuyez pour accéder au menu Connectivité.",
+    "CL_CF_CS_bio24_elements_setup_step3": "Appuyez sur « CONNECT OVEN » sur le côté gauche. Lorsque le menu s'ouvre, appuyez sur le bouton bascule à droite pour activer le Wi-Fi.",
+    "CL_CF_CS_bio24_elements_setup_step4": "Un bouton « CONNECT » apparaît. Appuyez sur le bouton. Vous pouvez maintenant continuer dans l'application en appuyant sur le bouton SUIVANT ci-dessous.",
+    "CL_CF_CS_bio24_elements_pair_step3": "Appuyez sur « CONNECT USER » sur le côté gauche. Lorsque le menu s'ouvre, appuyez sur le bouton « PAIR ». Vous pouvez maintenant continuer dans l'application en appuyant sur le bouton NEXT ci-dessous.",
+    "CL_DV_RF_scan_login_code_invalid": "Code QR de connexion invalide !"
 }
