--- a/language/i18n_he.json
+++ b/language/i18n_he.json
@@ -4025,5 +4025,25 @@
     "CL_DV_DW_water_energy": "מים ואנרגיה",
     "CL_DV_DW_light_display": "אור ותצוגה",
     "CL_DV_HOB_how_to_connect_accessories": "כיצד לחבר אביזרים",
-    "CL_CF_SK_amount_of_servings": "כמות מנות"
+    "CL_CF_SK_amount_of_servings": "כמות מנות",
+    "CL_CF_CS_name_duplicate_tip": "שם המכשיר כבר קיים",
+    "CL_DV_OV_your_oven_is_offline": "התנור שלך לא מקוון",
+    "CL_DV_OV_offline_tips": "לא ניתן להשתמש בחלק מהפונקציות כשהתנור במצב לא מקוון. נסה לחבר מחדש את התנור שלך.",
+    "CL_DV_OV_combi": "קומבי",
+    "share_account": "חשבונות משותפים",
+    "CL_CF_CS_bio24_creft_setup_setp1": "הפעל את התנור שלך. לחץ על שלוש הנקודות **** בפינה השמאלית של תצוגת התנור כדי לפתוח את תפריט הגישה הישירה.",
+    "CL_CF_CS_bio24_creft_setup_setp2": "פתח את תפריט ההגדרות על ידי לחיצה על הסמל **** בצד ימין.",
+    "CL_CF_CS_bio24_creft_setup_setp3": "גלול מטה בתפריט ההגדרות עד שתראה את ''התחבר''. לחץ כדי להיכנס לתפריט CONNECT.",
+    "CL_CF_CS_bio24_creft_setup_setp4": "לחץ על ''התחבר תנור''.",
+    "CL_CF_CS_bio24_creft_setup_setp5": "לחץ על לחצן החלפת המצב בצד ימין כדי להפעיל את ה- Wi-Fi.",
+    "CL_CF_CS_bio24_creft_setup_setp6": "מופיע כפתור ''CONNECT''. לחץ על הכפתור. כעת תוכל להמשיך באפליקציה על ידי הקשה על כפתור הבא למטה.",
+    "CL_CF_CS_bio24_creft_pair_step4": "לחץ על ''התחבר למשתמש''.",
+    "CL_CF_CS_bio24_creft_pair_step5": "לחץ על כפתור ''PAIR''.",
+    "CL_CF_CS_bio24_creft_pair_step6": "מתחילה ספירה לאחור. כעת תוכל להמשיך באפליקציה על ידי הקשה על כפתור הבא למטה.",
+    "CL_CF_CS_bio24_elements_setup_step1": "הפעל את התנור שלך. פתח את תפריט ההגדרות על ידי לחיצה על הסמל **** בפינה השמאלית העליונה.",
+    "CL_CF_CS_bio24_elements_setup_step2": "גלול מטה בתפריט ההגדרות עד שתראה ''קישוריות''. לחץ כדי להיכנס לתפריט קישוריות.",
+    "CL_CF_CS_bio24_elements_setup_step3": "לחץ על ''CONNECT OVEN'' בצד שמאל. כאשר התפריט נפתח, לחץ על לחצן החלפת המצב בצד ימין כדי להפעיל Wi-Fi.",
+    "CL_CF_CS_bio24_elements_setup_step4": "מופיע כפתור ''CONNECT''. לחץ על הכפתור. כעת תוכל להמשיך באפליקציה על ידי הקשה על כפתור הבא למטה.",
+    "CL_CF_CS_bio24_elements_pair_step3": "לחץ על ''התחבר למשתמש'' בצד שמאל. כאשר התפריט נפתח, לחץ על כפתור ''PAIR''. כעת תוכל להמשיך באפליקציה על ידי הקשה על כפתור הבא למטה.",
+    "CL_DV_RF_scan_login_code_invalid": "קוד QR כניסה לא חוקי!"
 }
