--- a/language/i18n_id.json
+++ b/language/i18n_id.json
@@ -4025,5 +4025,25 @@
     "CL_DV_DW_water_energy": "Air & Energi",
     "CL_DV_DW_light_display": "Cahaya & Tampilan",
     "CL_DV_HOB_how_to_connect_accessories": "Cara Menghubungkan Aksesori",
-    "CL_CF_SK_amount_of_servings": "Jumlah porsi"
+    "CL_CF_SK_amount_of_servings": "Jumlah porsi",
+    "CL_CF_CS_name_duplicate_tip": "Nama peralatan sudah ada",
+    "CL_DV_OV_your_oven_is_offline": "Oven Anda sedang offline",
+    "CL_DV_OV_offline_tips": "Beberapa fungsi tidak dapat digunakan saat oven dalam keadaan offline. Coba sambungkan kembali oven Anda.",
+    "CL_DV_OV_combi": "kombinasi",
+    "share_account": "AKUN BERSAMA",
+    "CL_CF_CS_bio24_creft_setup_setp1": "Nyalakan oven Anda. Tekan tiga titik **** di sudut kiri layar oven untuk membuka Menu Akses Langsung.",
+    "CL_CF_CS_bio24_creft_setup_setp2": "Buka menu Pengaturan dengan menekan ikon **** di sebelah kanan.",
+    "CL_CF_CS_bio24_creft_setup_setp3": "Gulir ke bawah menu Pengaturan hingga Anda melihat ''CONNECT''. Tekan untuk masuk ke menu CONNECT.",
+    "CL_CF_CS_bio24_creft_setup_setp4": "Tekan ''CONNECT OVEN''.",
+    "CL_CF_CS_bio24_creft_setup_setp5": "Tekan tombol sakelar di sebelah kanan untuk MENGAKTIFKAN Wi-Fi.",
+    "CL_CF_CS_bio24_creft_setup_setp6": "Tombol ''CONNECT'' akan muncul. Tekan tombol tersebut. Anda sekarang dapat melanjutkan di aplikasi dengan mengetuk tombol NEXT di bawah.",
+    "CL_CF_CS_bio24_creft_pair_step4": "Tekan ''HUBUNGKAN PENGGUNA''.",
+    "CL_CF_CS_bio24_creft_pair_step5": "Tekan tombol ''PAIR''.",
+    "CL_CF_CS_bio24_creft_pair_step6": "Hitungan mundur dimulai. Anda sekarang dapat melanjutkan di aplikasi dengan mengetuk tombol LANJUTKAN di bawah.",
+    "CL_CF_CS_bio24_elements_setup_step1": "Nyalakan oven Anda. Buka menu Pengaturan dengan menekan ikon **** di sudut kiri atas.",
+    "CL_CF_CS_bio24_elements_setup_step2": "Gulir ke bawah menu Pengaturan hingga Anda melihat ''Konektivitas''. Tekan untuk masuk ke menu Konektivitas.",
+    "CL_CF_CS_bio24_elements_setup_step3": "Tekan ''CONNECT OVEN'' di sisi kiri. Saat menu terbuka, tekan tombol sakelar di sebelah kanan untuk mengaktifkan Wi-Fi.",
+    "CL_CF_CS_bio24_elements_setup_step4": "Tombol ''CONNECT'' akan muncul. Tekan tombol tersebut. Anda sekarang dapat melanjutkan di aplikasi dengan mengetuk tombol NEXT di bawah.",
+    "CL_CF_CS_bio24_elements_pair_step3": "Tekan ''CONNECT USER'' di sisi kiri. Saat menu terbuka, tekan tombol ''PAIR''. Anda sekarang dapat melanjutkan di aplikasi dengan mengetuk tombol NEXT di bawah.",
+    "CL_DV_RF_scan_login_code_invalid": "Kode QR login tidak valid!"
 }
