--- a/language/i18n_it.json
+++ b/language/i18n_it.json
@@ -3578,12 +3578,12 @@
     "blue_power_off_title_add_device": "Attiva il Bluetooth per questo dispositivo",
     "blue_permission_off_title_add_device": "Bluetooth disabilitato per ConnectLife",
     "time_care_desc": "Quando questa funzione è attivata, il programma di lavaggio verrà eseguito con una durata di lavaggio più breve.",
-    "refr_exit_super_cool_tips": "Ora attiva la modalità Super Freezer ed esci dalla modalità Super Cool",
-    "refr_exit_super_freeze_tips": "Ora attiva la modalità Super Cool ed esci dalla modalità Super Freeze",
+    "refr_exit_super_cool_tips": "Attiva la modalità Super Freezer ed esci dalla modalità Super Cool",
+    "refr_exit_super_freeze_tips": "Attiva la modalità Super Cool ed esci dalla modalità Super Freeze",
     "enter_recipe_name": "Inserisci il nome della ricetta...",
     "results": "risultati",
     "no_favourite_recipes": "Nessuna ricetta preferita",
-    "no_favourite_recipes_desc": "Fare clic sul simbolo ## sulla ricetta per aggiungere una ricetta preferita.",
+    "no_favourite_recipes_desc": "Cliccare sul simbolo ## della ricetta per aggiungere una ricetta preferita.",
     "management": "gestione",
     "clear_all_favourites": "Cancella tutti i preferiti",
     "dish_type": "Tipo di piatto",
@@ -3595,15 +3595,15 @@
     "filter_result_of": "Filtra il risultato di “##”",
     "asko_oven_language": "Lingua",
     "asko_oven_modes": "Modalità",
-    "asko_oven_control": "Controllare",
+    "asko_oven_control": "Controllo",
     "asko_oven_show_date": "Mostra data",
     "previous": "Precedente",
-    "allow": "Permettere",
-    "dirty": "Sporca",
+    "allow": "Consentire",
+    "dirty": "Sporco",
     "hide": "Nascondere",
     "see_all": "Vedi tutto",
     "recipe_allergens_mustand_seeds": "Semi di senape",
-    "recipe_difficulties_challenging": "Stimolante",
+    "recipe_difficulties_challenging": "Impegnativo",
     "recipe_difficulties_beginner": "Facile",
     "recipe_type_breakfast": "Colazione",
     "recipe_type_desserts": "Dolci",
@@ -3619,7 +3619,7 @@
     "recipe_main_ingredients_fish_seafood": "Pesce e frutti di mare",
     "recipe_main_ingredients_chicken": "Pollo",
     "recipe_main_ingredients_milk": "Latte",
-    "recipe_main_ingredients_tacos_wraps": "Tacos e involtini",
+    "recipe_main_ingredients_tacos_wraps": "Tacos & Wraps",
     "recipe_main_ingredients_game": "Gioco",
     "recipe_nutrition_high_fiber": "Alto contenuto di fibre",
     "recipe_nutrition_low_sugars": "Basso contenuto di zuccheri",
@@ -4025,5 +4025,25 @@
     "CL_DV_DW_water_energy": "Acqua ed energia",
     "CL_DV_DW_light_display": "Luce e visualizzazione",
     "CL_DV_HOB_how_to_connect_accessories": "Come collegare gli accessori",
-    "CL_CF_SK_amount_of_servings": "Quantità di porzioni"
+    "CL_CF_SK_amount_of_servings": "Quantità di porzioni",
+    "CL_CF_CS_name_duplicate_tip": "Il nome dell'apparecchio esiste già",
+    "CL_DV_OV_your_oven_is_offline": "Il tuo forno è offline",
+    "CL_DV_OV_offline_tips": "Alcune funzionalità non possono essere utilizzate quando il forno è offline. Prova a ricollegare il forno.",
+    "CL_DV_OV_combi": "combinato",
+    "share_account": "ACCOUNT CONDIVISI",
+    "CL_CF_CS_bio24_creft_setup_setp1": "Accendi il forno. Premi sui tre punti **** nell'angolo sinistro del display del forno per aprire il menu di accesso diretto.",
+    "CL_CF_CS_bio24_creft_setup_setp2": "Aprire il menu Impostazioni premendo l'icona **** a destra.",
+    "CL_CF_CS_bio24_creft_setup_setp3": "Scorri verso il basso il menu Impostazioni fino a vedere ''CONNECT''. Premi per entrare nel menu CONNECT.",
+    "CL_CF_CS_bio24_creft_setup_setp4": "Premere su ''CONNETTI FORNO''.",
+    "CL_CF_CS_bio24_creft_setup_setp5": "Premere il pulsante di attivazione/disattivazione a destra per ATTIVARE il Wi-Fi.",
+    "CL_CF_CS_bio24_creft_setup_setp6": "Appare un pulsante ''CONNECT''. Premi il pulsante. Ora puoi procedere nell'app toccando il pulsante NEXT qui sotto.",
+    "CL_CF_CS_bio24_creft_pair_step4": "Premere su ''CONNETTI UTENTE''.",
+    "CL_CF_CS_bio24_creft_pair_step5": "Premere il pulsante ''ASSOCIA''.",
+    "CL_CF_CS_bio24_creft_pair_step6": "Inizia un conto alla rovescia. Ora puoi procedere nell'app toccando il pulsante NEXT qui sotto.",
+    "CL_CF_CS_bio24_elements_setup_step1": "Accendi il forno. Apri il menu Impostazioni premendo l'icona **** nell'angolo in alto a sinistra.",
+    "CL_CF_CS_bio24_elements_setup_step2": "Scorri verso il basso il menu Impostazioni fino a vedere ''Connettività''. Premi per entrare nel menu Connettività.",
+    "CL_CF_CS_bio24_elements_setup_step3": "Premere su ''CONNECT OVEN'' sul lato sinistro. Quando si apre il menu, premere sul pulsante di attivazione/disattivazione a destra per abilitare il Wi-Fi.",
+    "CL_CF_CS_bio24_elements_setup_step4": "Appare un pulsante ''CONNECT''. Premi il pulsante. Ora puoi procedere nell'app toccando il pulsante NEXT qui sotto.",
+    "CL_CF_CS_bio24_elements_pair_step3": "Premi su ''CONNECT USER'' sul lato sinistro. Quando si apre il menu, premi sul pulsante ''PAIR''. Ora puoi procedere nell'app toccando il pulsante NEXT qui sotto.",
+    "CL_DV_RF_scan_login_code_invalid": "Codice QR di accesso non valido!"
 }
