--- a/language/i18n_ja.json
+++ b/language/i18n_ja.json
@@ -4025,5 +4025,25 @@
     "CL_DV_DW_water_energy": "水とエネルギー",
     "CL_DV_DW_light_display": "照明とディスプレイ",
     "CL_DV_HOB_how_to_connect_accessories": "アクセサリの接続方法",
-    "CL_CF_SK_amount_of_servings": "1食分量"
+    "CL_CF_SK_amount_of_servings": "1食分量",
+    "CL_CF_CS_name_duplicate_tip": "アプライアンス名はすでに存在します",
+    "CL_DV_OV_your_oven_is_offline": "オーブンはオフラインです",
+    "CL_DV_OV_offline_tips": "オーブンがオフラインのときは、一部の機能は使用できません。オーブンを再接続してください。",
+    "CL_DV_OV_combi": "コンビ",
+    "share_account": "共有アカウント",
+    "CL_CF_CS_bio24_creft_setup_setp1": "オーブンをオンにします。オーブンのディスプレイの左隅にある 3 つのドット **** を押して、ダイレクト アクセス メニューを開きます。",
+    "CL_CF_CS_bio24_creft_setup_setp2": "右側の****アイコンを押して設定メニューを開きます。",
+    "CL_CF_CS_bio24_creft_setup_setp3": "「CONNECT」が表示されるまで設定メニューを下にスクロールします。押して「CONNECT」メニューに入ります。",
+    "CL_CF_CS_bio24_creft_setup_setp4": "「CONNECT OVEN」を押します。",
+    "CL_CF_CS_bio24_creft_setup_setp5": "右側のトグルボタンを押して、Wi-Fi をオンにします。",
+    "CL_CF_CS_bio24_creft_setup_setp6": "「CONNECT」ボタンが表示されます。ボタンを押してください。下の「NEXT」ボタンをタップすると、アプリ内を進むことができます。",
+    "CL_CF_CS_bio24_creft_pair_step4": "「CONNECT USER」を押します。",
+    "CL_CF_CS_bio24_creft_pair_step5": "「ペアリング」ボタンを押します。",
+    "CL_CF_CS_bio24_creft_pair_step6": "カウントダウンが始まります。下の「次へ」ボタンをタップすると、アプリ内を進むことができます。",
+    "CL_CF_CS_bio24_elements_setup_step1": "オーブンをオンにします。左上隅の****アイコンを押して設定メニューを開きます。",
+    "CL_CF_CS_bio24_elements_setup_step2": "「接続」が表示されるまで設定メニューを下にスクロールします。 を押して接続メニューに入ります。",
+    "CL_CF_CS_bio24_elements_setup_step3": "左側の「CONNECT OVEN」を押します。メニューが開いたら、右側のトグルボタンを押して Wi-Fi を有効にします。",
+    "CL_CF_CS_bio24_elements_setup_step4": "「CONNECT」ボタンが表示されます。ボタンを押してください。下の「NEXT」ボタンをタップすると、アプリ内を進むことができます。",
+    "CL_CF_CS_bio24_elements_pair_step3": "左側の「ユーザー接続」を押します。メニューが開いたら、「ペアリング」ボタンを押します。下の「次へ」ボタンをタップすると、アプリ内を進むことができます。",
+    "CL_DV_RF_scan_login_code_invalid": "ログインQRコードが無効です。"
 }
