--- a/language/i18n_ko.json
+++ b/language/i18n_ko.json
@@ -4025,5 +4025,25 @@
     "CL_DV_DW_water_energy": "물과 에너지",
     "CL_DV_DW_light_display": "조명 및 디스플레이",
     "CL_DV_HOB_how_to_connect_accessories": "액세서리 연결 방법",
-    "CL_CF_SK_amount_of_servings": "제공량"
+    "CL_CF_SK_amount_of_servings": "제공량",
+    "CL_CF_CS_name_duplicate_tip": "기기 이름이 이미 존재합니다",
+    "CL_DV_OV_your_oven_is_offline": "오븐이 오프라인 상태입니다",
+    "CL_DV_OV_offline_tips": "오븐이 오프라인일 때는 일부 기능을 사용할 수 없습니다. 오븐을 다시 연결해 보세요.",
+    "CL_DV_OV_combi": "콤비",
+    "share_account": "공유 계정",
+    "CL_CF_CS_bio24_creft_setup_setp1": "오븐을 켜세요. 오븐 디스플레이 왼쪽 모서리에 있는 세 개의 점 ****을 눌러 직접 액세스 메뉴를 엽니다.",
+    "CL_CF_CS_bio24_creft_setup_setp2": "오른쪽에 있는 **** 아이콘을 눌러 설정 메뉴를 엽니다.",
+    "CL_CF_CS_bio24_creft_setup_setp3": "설정 메뉴를 아래로 스크롤하여 ''CONNECT''가 나올 때까지 스크롤합니다. CONNECT 메뉴로 들어가려면 누르세요.",
+    "CL_CF_CS_bio24_creft_setup_setp4": "''오븐 연결''을 누르세요.",
+    "CL_CF_CS_bio24_creft_setup_setp5": "오른쪽에 있는 토글 버튼을 눌러 Wi-Fi를 켜세요.",
+    "CL_CF_CS_bio24_creft_setup_setp6": "''CONNECT'' 버튼이 나타납니다. 버튼을 누르세요. 이제 아래의 NEXT 버튼을 탭하여 앱에서 진행할 수 있습니다.",
+    "CL_CF_CS_bio24_creft_pair_step4": "''사용자 연결''을 누르세요.",
+    "CL_CF_CS_bio24_creft_pair_step5": "''페어'' 버튼을 누르세요.",
+    "CL_CF_CS_bio24_creft_pair_step6": "카운트다운이 시작됩니다. 이제 아래의 NEXT 버튼을 탭하여 앱에서 진행할 수 있습니다.",
+    "CL_CF_CS_bio24_elements_setup_step1": "오븐을 켜세요. 왼쪽 상단 모서리에 있는 **** 아이콘을 눌러 설정 메뉴를 엽니다.",
+    "CL_CF_CS_bio24_elements_setup_step2": "설정 메뉴를 아래로 스크롤하여 ''연결성''이 나올 때까지 스크롤합니다. 연결성 메뉴로 들어가려면 누르세요.",
+    "CL_CF_CS_bio24_elements_setup_step3": "왼쪽에 있는 ''CONNECT OVEN''을 누르세요. 메뉴가 열리면 오른쪽에 있는 토글 버튼을 눌러 Wi-Fi를 활성화하세요.",
+    "CL_CF_CS_bio24_elements_setup_step4": "''CONNECT'' 버튼이 나타납니다. 버튼을 누르세요. 이제 아래의 NEXT 버튼을 탭하여 앱에서 진행할 수 있습니다.",
+    "CL_CF_CS_bio24_elements_pair_step3": "왼쪽에 있는 ''CONNECT USER''를 누르세요. 메뉴가 열리면 ''PAIR'' 버튼을 누르세요. 이제 아래의 NEXT 버튼을 눌러 앱에서 진행할 수 있습니다.",
+    "CL_DV_RF_scan_login_code_invalid": "잘못된 로그인 QR 코드입니다!"
 }
