--- a/language/i18n_ms.json
+++ b/language/i18n_ms.json
@@ -4025,5 +4025,25 @@
     "CL_DV_DW_water_energy": "Air & Tenaga",
     "CL_DV_DW_light_display": "Cahaya & Paparan",
     "CL_DV_HOB_how_to_connect_accessories": "Bagaimana-Untuk Menyambung Aksesori",
-    "CL_CF_SK_amount_of_servings": "Jumlah hidangan"
+    "CL_CF_SK_amount_of_servings": "Jumlah hidangan",
+    "CL_CF_CS_name_duplicate_tip": "Nama perkakas sudah wujud",
+    "CL_DV_OV_your_oven_is_offline": "Ketuhar anda di luar talian",
+    "CL_DV_OV_offline_tips": "Sesetengah fungsi tidak boleh digunakan apabila ketuhar berada di luar talian. Cuba sambungkan semula ketuhar anda.",
+    "CL_DV_OV_combi": "kombi",
+    "share_account": "AKAUN KONGSI",
+    "CL_CF_CS_bio24_creft_setup_setp1": "Hidupkan ketuhar anda. Tekan pada tiga titik **** di sudut kiri paparan ketuhar untuk membuka Menu Akses Terus.",
+    "CL_CF_CS_bio24_creft_setup_setp2": "Buka menu Tetapan dengan menekan ikon **** di sebelah kanan.",
+    "CL_CF_CS_bio24_creft_setup_setp3": "Tatal ke bawah menu Tetapan sehingga anda melihat ''CONNECT''. Tekan untuk masuk ke menu CONNECT.",
+    "CL_CF_CS_bio24_creft_setup_setp4": "Tekan pada ''CONNECT OVEN''.",
+    "CL_CF_CS_bio24_creft_setup_setp5": "Tekan pada butang togol di sebelah kanan untuk HIDUPKAN Wi-Fi.",
+    "CL_CF_CS_bio24_creft_setup_setp6": "Butang ''CONNECT'' muncul. Tekan pada butang. Anda kini boleh meneruskan dalam apl dengan mengetik pada butang SETERUSNYA di bawah.",
+    "CL_CF_CS_bio24_creft_pair_step4": "Tekan pada ''CONNECT USER''.",
+    "CL_CF_CS_bio24_creft_pair_step5": "Tekan pada butang ''PAIR''.",
+    "CL_CF_CS_bio24_creft_pair_step6": "Kira detik bermula. Anda kini boleh meneruskan dalam apl dengan mengetik pada butang SETERUSNYA di bawah.",
+    "CL_CF_CS_bio24_elements_setup_step1": "Hidupkan ketuhar anda. Buka menu Tetapan dengan menekan ikon **** di sudut kiri atas.",
+    "CL_CF_CS_bio24_elements_setup_step2": "Tatal ke bawah menu Tetapan sehingga anda melihat ''Kesambungan''. Tekan untuk memasuki menu Kesambungan.",
+    "CL_CF_CS_bio24_elements_setup_step3": "Tekan pada ''CONNECT OVEN'' di sebelah kiri. Apabila menu dibuka, tekan pada butang togol di sebelah kanan untuk mendayakan Wi-Fi.",
+    "CL_CF_CS_bio24_elements_setup_step4": "Butang ''CONNECT'' muncul. Tekan pada butang. Anda kini boleh meneruskan dalam apl dengan mengetik pada butang SETERUSNYA di bawah.",
+    "CL_CF_CS_bio24_elements_pair_step3": "Tekan pada ''CONNECT USER'' di sebelah kiri. Apabila menu dibuka, tekan pada butang ''PAIR''. Anda kini boleh meneruskan dalam apl dengan mengetik pada butang SETERUSNYA di bawah.",
+    "CL_DV_RF_scan_login_code_invalid": "Kod QR log masuk tidak sah!"
 }
