--- a/language/i18n_ro.json
+++ b/language/i18n_ro.json
@@ -4025,5 +4025,25 @@
     "CL_DV_DW_water_energy": "Apă și energie",
     "CL_DV_DW_light_display": "Lumină și afișaj",
     "CL_DV_HOB_how_to_connect_accessories": "Cum se conectează accesoriile",
-    "CL_CF_SK_amount_of_servings": "Cantitatea de porții"
+    "CL_CF_SK_amount_of_servings": "Cantitatea de porții",
+    "CL_CF_CS_name_duplicate_tip": "Numele aparatului există deja",
+    "CL_DV_OV_your_oven_is_offline": "Cuptorul dvs. este offline",
+    "CL_DV_OV_offline_tips": "Unele funcționalități nu pot fi utilizate când cuptorul este offline. Încercați să reconectați cuptorul.",
+    "CL_DV_OV_combi": "combi",
+    "share_account": "CONTURI ÎN COMUNICARE",
+    "CL_CF_CS_bio24_creft_setup_setp1": "Porniți cuptorul. Apăsați pe cele trei puncte **** din colțul din stânga ecranului cuptorului pentru a deschide Meniul Acces Direct.",
+    "CL_CF_CS_bio24_creft_setup_setp2": "Deschideți meniul Setări apăsând pictograma **** din dreapta.",
+    "CL_CF_CS_bio24_creft_setup_setp3": "Derulați în jos meniul Setări până când vedeți „CONECTARE”. Apăsați pentru a intra în meniul CONECTARE.",
+    "CL_CF_CS_bio24_creft_setup_setp4": "Apăsați pe ''CONECTARE CUPTOR''.",
+    "CL_CF_CS_bio24_creft_setup_setp5": "Apăsați pe butonul de comutare din dreapta pentru a porni Wi-Fi.",
+    "CL_CF_CS_bio24_creft_setup_setp6": "Apare un buton „CONECTARE”. Apăsați pe butonul. Acum puteți continua în aplicație atingând butonul URMĂTOR de mai jos.",
+    "CL_CF_CS_bio24_creft_pair_step4": "Apăsați pe „CONECTARE UTILIZATOR”.",
+    "CL_CF_CS_bio24_creft_pair_step5": "Apăsați pe butonul „PERECHI”.",
+    "CL_CF_CS_bio24_creft_pair_step6": "Începe o numărătoare inversă. Acum puteți continua în aplicație atingând butonul URMĂTOR de mai jos.",
+    "CL_CF_CS_bio24_elements_setup_step1": "Porniți cuptorul. Deschideți meniul Setări apăsând pictograma **** din colțul din stânga sus.",
+    "CL_CF_CS_bio24_elements_setup_step2": "Derulați în jos meniul Setări până când vedeți „Conectivitate”. Apăsați pentru a intra în meniul Conectivitate.",
+    "CL_CF_CS_bio24_elements_setup_step3": "Apăsați pe „CONECTARE CUPTOR” din partea stângă. Când se deschide meniul, apăsați pe butonul de comutare din dreapta pentru a activa Wi-Fi.",
+    "CL_CF_CS_bio24_elements_setup_step4": "Apare un buton „CONECTARE”. Apăsați pe butonul. Acum puteți continua în aplicație atingând butonul URMĂTOR de mai jos.",
+    "CL_CF_CS_bio24_elements_pair_step3": "Apăsați pe „CONECTARE UTILIZATOR” din partea stângă. Când se deschide meniul, apăsați pe butonul „PERECHI”. Acum puteți continua în aplicație atingând butonul URMĂTOR de mai jos.",
+    "CL_DV_RF_scan_login_code_invalid": "Cod QR de conectare nevalid!"
 }
