--- a/language/i18n_ru.json
+++ b/language/i18n_ru.json
@@ -4025,5 +4025,25 @@
     "CL_DV_DW_water_energy": "Вода и энергия",
     "CL_DV_DW_light_display": "Свет и дисплей",
     "CL_DV_HOB_how_to_connect_accessories": "Как подключить аксессуары",
-    "CL_CF_SK_amount_of_servings": "Количество порций"
+    "CL_CF_SK_amount_of_servings": "Количество порций",
+    "CL_CF_CS_name_duplicate_tip": "Имя устройства уже существует",
+    "CL_DV_OV_your_oven_is_offline": "Ваша духовка не в сети",
+    "CL_DV_OV_offline_tips": "Некоторые функции не могут быть использованы, когда духовка находится в автономном режиме. Попробуйте переподключить духовку.",
+    "CL_DV_OV_combi": "комби",
+    "share_account": "ОБЩИЕ СЧЕТА",
+    "CL_CF_CS_bio24_creft_setup_setp1": "Включите духовку. Нажмите на три точки **** в левом углу дисплея духовки, чтобы открыть меню прямого доступа.",
+    "CL_CF_CS_bio24_creft_setup_setp2": "Откройте меню «Настройки», нажав на значок **** справа.",
+    "CL_CF_CS_bio24_creft_setup_setp3": "Прокрутите меню настроек вниз, пока не увидите «ПОДКЛЮЧИТЬ». Нажмите, чтобы войти в меню ПОДКЛЮЧИТЬ.",
+    "CL_CF_CS_bio24_creft_setup_setp4": "Нажмите «ПОДКЛЮЧИТЬ ДУХОВКУ».",
+    "CL_CF_CS_bio24_creft_setup_setp5": "Нажмите на кнопку-переключатель справа, чтобы включить Wi-Fi.",
+    "CL_CF_CS_bio24_creft_setup_setp6": "Появляется кнопка ''ПОДКЛЮЧИТЬ''. Нажмите на кнопку. Теперь вы можете продолжить работу в приложении, нажав на кнопку ДАЛЕЕ ниже.",
+    "CL_CF_CS_bio24_creft_pair_step4": "Нажмите «ПОДКЛЮЧИТЬ ПОЛЬЗОВАТЕЛЯ».",
+    "CL_CF_CS_bio24_creft_pair_step5": "Нажмите кнопку «СОПРЯЖЕНИЕ».",
+    "CL_CF_CS_bio24_creft_pair_step6": "Начинается обратный отсчет. Теперь вы можете продолжить в приложении, нажав на кнопку ДАЛЕЕ ниже.",
+    "CL_CF_CS_bio24_elements_setup_step1": "Включите духовку. Откройте меню настроек, нажав на значок **** в левом верхнем углу.",
+    "CL_CF_CS_bio24_elements_setup_step2": "Прокрутите меню настроек вниз, пока не увидите «Подключение». Нажмите, чтобы войти в меню «Подключение».",
+    "CL_CF_CS_bio24_elements_setup_step3": "Нажмите на ''ПОДКЛЮЧИТЬ ПЕЧЬ'' слева. Когда откроется меню, нажмите на кнопку-переключатель справа, чтобы включить Wi-Fi.",
+    "CL_CF_CS_bio24_elements_setup_step4": "Появляется кнопка ''ПОДКЛЮЧИТЬ''. Нажмите на кнопку. Теперь вы можете продолжить работу в приложении, нажав на кнопку ДАЛЕЕ ниже.",
+    "CL_CF_CS_bio24_elements_pair_step3": "Нажмите на ''CONNECT USER'' слева. Когда откроется меню, нажмите на кнопку ''PAIR''. Теперь вы можете продолжить в приложении, нажав на кнопку ДАЛЕЕ ниже.",
+    "CL_DV_RF_scan_login_code_invalid": "Неверный QR-код входа!"
 }
