--- a/language/i18n_sk.json
+++ b/language/i18n_sk.json
@@ -4025,5 +4025,25 @@
     "CL_DV_DW_water_energy": "Voda a energia",
     "CL_DV_DW_light_display": "Svetlo a displej",
     "CL_DV_HOB_how_to_connect_accessories": "Ako pripojiť príslušenstvo",
-    "CL_CF_SK_amount_of_servings": "Množstvo porcií"
+    "CL_CF_SK_amount_of_servings": "Množstvo porcií",
+    "CL_CF_CS_name_duplicate_tip": "Názov zariadenia už existuje",
+    "CL_DV_OV_your_oven_is_offline": "Vaša rúra je offline",
+    "CL_DV_OV_offline_tips": "Niektoré funkcie nie je možné použiť, keď je rúra offline. Skúste znova pripojiť rúru.",
+    "CL_DV_OV_combi": "kombi",
+    "share_account": "ZDIEĽANÉ ÚČTY",
+    "CL_CF_CS_bio24_creft_setup_setp1": "Zapnite rúru. Stlačením na tri bodky **** v ľavom rohu displeja rúry otvoríte ponuku priameho prístupu.",
+    "CL_CF_CS_bio24_creft_setup_setp2": "Otvorte ponuku Nastavenia stlačením ikony **** vpravo.",
+    "CL_CF_CS_bio24_creft_setup_setp3": "Rolujte nadol v ponuke Nastavenia, kým neuvidíte ''CONNECT''. Stlačením vstúpite do ponuky CONNECT.",
+    "CL_CF_CS_bio24_creft_setup_setp4": "Stlačte ''PRIPOJIŤ RÚRU''.",
+    "CL_CF_CS_bio24_creft_setup_setp5": "Stlačením prepínača na pravej strane zapnite Wi-Fi.",
+    "CL_CF_CS_bio24_creft_setup_setp6": "Zobrazí sa tlačidlo ''CONNECT''. Stlačte tlačidlo. Teraz môžete pokračovať v aplikácii klepnutím na tlačidlo NEXT nižšie.",
+    "CL_CF_CS_bio24_creft_pair_step4": "Stlačte na ''PRIPOJIŤ POUŽÍVATEĽA''.",
+    "CL_CF_CS_bio24_creft_pair_step5": "Stlačte tlačidlo ''PÁROVAŤ''.",
+    "CL_CF_CS_bio24_creft_pair_step6": "Spustí sa odpočítavanie. Teraz môžete pokračovať v aplikácii klepnutím na tlačidlo NEXT nižšie.",
+    "CL_CF_CS_bio24_elements_setup_step1": "Zapnite rúru. Otvorte ponuku Nastavenia stlačením ikony **** v ľavom hornom rohu.",
+    "CL_CF_CS_bio24_elements_setup_step2": "Rolujte nadol v ponuke Nastavenia, kým neuvidíte ''Pripojenie''. Stlačením vstúpite do ponuky Pripojenia.",
+    "CL_CF_CS_bio24_elements_setup_step3": "Stlačte ''PRIPOJIŤ RÚRU'' na ľavej strane. Keď sa otvorí ponuka, stlačte prepínač na pravej strane, aby ste povolili Wi-Fi.",
+    "CL_CF_CS_bio24_elements_setup_step4": "Zobrazí sa tlačidlo ''CONNECT''. Stlačte tlačidlo. Teraz môžete pokračovať v aplikácii klepnutím na tlačidlo NEXT nižšie.",
+    "CL_CF_CS_bio24_elements_pair_step3": "Stlačte na ''CONNECT USER'' na ľavej strane. Keď sa otvorí ponuka, stlačte tlačidlo ''PAIR''. Teraz môžete pokračovať v aplikácii klepnutím na tlačidlo NEXT nižšie.",
+    "CL_DV_RF_scan_login_code_invalid": "Neplatný prihlasovací QR kód!"
 }
