--- a/language/i18n_sr_BA.json
+++ b/language/i18n_sr_BA.json
@@ -4025,5 +4025,25 @@
     "CL_DV_DW_water_energy": "Вода и енергија",
     "CL_DV_DW_light_display": "Светло и дисплеј",
     "CL_DV_HOB_how_to_connect_accessories": "Како повезати додатну опрему",
-    "CL_CF_SK_amount_of_servings": "Количина порција"
+    "CL_CF_SK_amount_of_servings": "Количина порција",
+    "CL_CF_CS_name_duplicate_tip": "Назив уређаја већ постоји",
+    "CL_DV_OV_your_oven_is_offline": "Ваша пећница је ван мреже",
+    "CL_DV_OV_offline_tips": "Неке функције се не могу користити када је пећница ван мреже. Покушајте поново да повежете пећницу.",
+    "CL_DV_OV_combi": "цомби",
+    "share_account": "ДЕЉЕНИ НАЛОГИ",
+    "CL_CF_CS_bio24_creft_setup_setp1": "Укључите пећницу. Притисните три тачке **** у левом углу екрана рерне да отворите мени за директан приступ.",
+    "CL_CF_CS_bio24_creft_setup_setp2": "Отворите мени Подешавања притиском на икону **** са десне стране.",
+    "CL_CF_CS_bio24_creft_setup_setp3": "Померите се надоле кроз мени Подешавања док не видите „ПОВЕЗИВАЊЕ“. Притисните да бисте ушли у мени ЦОННЕЦТ.",
+    "CL_CF_CS_bio24_creft_setup_setp4": "Притисните на ''ПОВЕЗИВАЊЕ ОВЕН''.",
+    "CL_CF_CS_bio24_creft_setup_setp5": "Притисните дугме за пребацивање са десне стране да бисте УКЉУЧИЛИ Ви-Фи.",
+    "CL_CF_CS_bio24_creft_setup_setp6": "Појављује се дугме ''ЦОННЕЦТ''. Притисните дугме. Сада можете да наставите у апликацији тако што ћете додирнути дугме НЕКСТ у наставку.",
+    "CL_CF_CS_bio24_creft_pair_step4": "Притисните ''ПОВЕЗИ КОРИСНИКА''.",
+    "CL_CF_CS_bio24_creft_pair_step5": "Притисните дугме ''ПАИР''.",
+    "CL_CF_CS_bio24_creft_pair_step6": "Почиње одбројавање. Сада можете да наставите у апликацији тако што ћете додирнути дугме НЕКСТ у наставку.",
+    "CL_CF_CS_bio24_elements_setup_step1": "Укључите пећницу. Отворите мени Подешавања притиском на икону **** у горњем левом углу.",
+    "CL_CF_CS_bio24_elements_setup_step2": "Померите се надоле кроз мени Подешавања док не видите „Повезивање“. Притисните да бисте ушли у мени за повезивање.",
+    "CL_CF_CS_bio24_elements_setup_step3": "Притисните „ПОВЕЗИВАЊЕ ОВЕН“ на левој страни. Када се мени отвори, притисните дугме за пребацивање на десној страни да бисте омогућили Ви-Фи.",
+    "CL_CF_CS_bio24_elements_setup_step4": "Појављује се дугме ''ЦОННЕЦТ''. Притисните дугме. Сада можете да наставите у апликацији тако што ћете додирнути дугме НЕКСТ у наставку.",
+    "CL_CF_CS_bio24_elements_pair_step3": "Притисните ''ПОВЕЗИ КОРИСНИКА'' на левој страни. Када се мени отвори, притисните дугме ''ПАИР''. Сада можете да наставите у апликацији тако што ћете додирнути дугме НЕКСТ у наставку.",
+    "CL_DV_RF_scan_login_code_invalid": "Неважећи КР код за пријаву!"
 }
