--- a/language/i18n_vi.json
+++ b/language/i18n_vi.json
@@ -4025,5 +4025,25 @@
     "CL_DV_DW_water_energy": "Nước và Năng lượng",
     "CL_DV_DW_light_display": "Ánh sáng & Màn hình",
     "CL_DV_HOB_how_to_connect_accessories": "Cách kết nối phụ kiện",
-    "CL_CF_SK_amount_of_servings": "Số lượng khẩu phần ăn"
+    "CL_CF_SK_amount_of_servings": "Số lượng khẩu phần ăn",
+    "CL_CF_CS_name_duplicate_tip": "Tên thiết bị đã tồn tại",
+    "CL_DV_OV_your_oven_is_offline": "Lò nướng của bạn đang ngoại tuyến",
+    "CL_DV_OV_offline_tips": "Một số chức năng không thể sử dụng khi lò nướng ngoại tuyến. Hãy thử kết nối lại lò nướng của bạn.",
+    "CL_DV_OV_combi": "kết hợp",
+    "share_account": "TÀI KHOẢN CHIA SẺ",
+    "CL_CF_CS_bio24_creft_setup_setp1": "Bật lò nướng. Nhấn vào ba dấu chấm **** ở góc trái màn hình lò nướng để mở Menu truy cập trực tiếp.",
+    "CL_CF_CS_bio24_creft_setup_setp2": "Mở menu Cài đặt bằng cách nhấn vào biểu tượng **** ở bên phải.",
+    "CL_CF_CS_bio24_creft_setup_setp3": "Cuộn xuống menu Cài đặt cho đến khi bạn thấy ''KẾT NỐI''. Nhấn để vào menu KẾT NỐI.",
+    "CL_CF_CS_bio24_creft_setup_setp4": "Nhấn vào ''KẾT NỐI LÒ NƯỚNG''.",
+    "CL_CF_CS_bio24_creft_setup_setp5": "Nhấn vào nút chuyển đổi bên phải để BẬT Wi-Fi.",
+    "CL_CF_CS_bio24_creft_setup_setp6": "Nút ''CONNECT'' xuất hiện. Nhấn vào nút. Bây giờ bạn có thể tiếp tục trong ứng dụng bằng cách nhấn vào nút NEXT bên dưới.",
+    "CL_CF_CS_bio24_creft_pair_step4": "Nhấn vào ''KẾT NỐI NGƯỜI DÙNG''.",
+    "CL_CF_CS_bio24_creft_pair_step5": "Nhấn vào nút ''PAIR''.",
+    "CL_CF_CS_bio24_creft_pair_step6": "Đếm ngược bắt đầu. Bây giờ bạn có thể tiếp tục trong ứng dụng bằng cách chạm vào nút TIẾP THEO bên dưới.",
+    "CL_CF_CS_bio24_elements_setup_step1": "Bật lò nướng. Mở menu Cài đặt bằng cách nhấn vào biểu tượng **** ở góc trên bên trái.",
+    "CL_CF_CS_bio24_elements_setup_step2": "Cuộn xuống menu Cài đặt cho đến khi bạn thấy ''Kết nối''. Nhấn để vào menu Kết nối.",
+    "CL_CF_CS_bio24_elements_setup_step3": "Nhấn vào ''CONNECT OVEN'' ở phía bên trái. Khi menu mở ra, nhấn vào nút chuyển đổi ở bên phải để bật Wi-Fi.",
+    "CL_CF_CS_bio24_elements_setup_step4": "Nút ''CONNECT'' xuất hiện. Nhấn vào nút. Bây giờ bạn có thể tiếp tục trong ứng dụng bằng cách nhấn vào nút NEXT bên dưới.",
+    "CL_CF_CS_bio24_elements_pair_step3": "Nhấn vào ''CONNECT USER'' ở phía bên trái. Khi menu mở ra, nhấn vào nút ''PAIR''. Bây giờ bạn có thể tiếp tục trong ứng dụng bằng cách nhấn vào nút NEXT bên dưới.",
+    "CL_DV_RF_scan_login_code_invalid": "Mã QR đăng nhập không hợp lệ!"
 }
