--- a/language/i18n_bg.json
+++ b/language/i18n_bg.json
@@ -4025,5 +4025,25 @@
     "CL_DV_DW_water_energy": "Вода и енергия",
     "CL_DV_DW_light_display": "Светлина и дисплей",
     "CL_DV_HOB_how_to_connect_accessories": "Как да свържете аксесоари",
-    "CL_CF_SK_amount_of_servings": "Количество порции"
+    "CL_CF_SK_amount_of_servings": "Количество порции",
+    "CL_CF_CS_name_duplicate_tip": "Името на уреда вече съществува",
+    "CL_DV_OV_your_oven_is_offline": "Вашата фурна е офлайн",
+    "CL_DV_OV_offline_tips": "Някои функции не могат да се използват, когато фурната е офлайн. Опитайте да свържете отново вашата фурна.",
+    "CL_DV_OV_combi": "комби",
+    "share_account": "СПОДЕЛЕНИ АКАУНТИ",
+    "CL_CF_CS_bio24_creft_setup_setp1": "Включете фурната си. Натиснете трите точки **** в левия ъгъл на дисплея на фурната, за да отворите менюто за директен достъп.",
+    "CL_CF_CS_bio24_creft_setup_setp2": "Отворете менюто с настройки, като натиснете иконата **** вдясно.",
+    "CL_CF_CS_bio24_creft_setup_setp3": "Превъртете надолу менюто с настройки, докато видите „СВЪРЗВАНЕ“. Натиснете, за да влезете в менюто CONNECT.",
+    "CL_CF_CS_bio24_creft_setup_setp4": "Натиснете ''CONNECT OVEN''.",
+    "CL_CF_CS_bio24_creft_setup_setp5": "Натиснете бутона за превключване отдясно, за да ВКЛЮЧИТЕ Wi-Fi.",
+    "CL_CF_CS_bio24_creft_setup_setp6": "Появява се бутон ''СВЪРЗВАНЕ''. Натиснете бутона. Вече можете да продължите в приложението, като докоснете бутона NEXT по-долу.",
+    "CL_CF_CS_bio24_creft_pair_step4": "Натиснете „СВЪРЗВАНЕ НА ПОТРЕБИТЕЛЯ“.",
+    "CL_CF_CS_bio24_creft_pair_step5": "Натиснете бутона ''PAIR''.",
+    "CL_CF_CS_bio24_creft_pair_step6": "Започва обратно броене. Вече можете да продължите в приложението, като докоснете бутона NEXT по-долу.",
+    "CL_CF_CS_bio24_elements_setup_step1": "Включете фурната си. Отворете менюто с настройки, като натиснете иконата **** в горния ляв ъгъл.",
+    "CL_CF_CS_bio24_elements_setup_step2": "Превъртете надолу менюто с настройки, докато видите „Свързване“. Натиснете, за да влезете в менюто за свързване.",
+    "CL_CF_CS_bio24_elements_setup_step3": "Натиснете ''CONNECT OVEN'' от лявата страна. Когато се отвори менюто, натиснете бутона за превключване вдясно, за да активирате Wi-Fi.",
+    "CL_CF_CS_bio24_elements_setup_step4": "Появява се бутон ''СВЪРЗВАНЕ''. Натиснете бутона. Вече можете да продължите в приложението, като докоснете бутона NEXT по-долу.",
+    "CL_CF_CS_bio24_elements_pair_step3": "Натиснете „СВЪРЗВАНЕ НА ПОТРЕБИТЕЛЯ“ от лявата страна. Когато се отвори менюто, натиснете бутона ''PAIR''. Вече можете да продължите в приложението, като докоснете бутона NEXT по-долу.",
+    "CL_DV_RF_scan_login_code_invalid": "Невалиден QR код за влизане!"
 }
