--- a/language/i18n_nl.json
+++ b/language/i18n_nl.json
@@ -4025,5 +4025,25 @@
     "CL_DV_DW_water_energy": "Water & Energie",
     "CL_DV_DW_light_display": "Licht & Display",
     "CL_DV_HOB_how_to_connect_accessories": "Hoe u accessoires aansluit",
-    "CL_CF_SK_amount_of_servings": "Aantal porties"
+    "CL_CF_SK_amount_of_servings": "Aantal porties",
+    "CL_CF_CS_name_duplicate_tip": "Apparaatnaam bestaat al",
+    "CL_DV_OV_your_oven_is_offline": "Uw oven is offline",
+    "CL_DV_OV_offline_tips": "Sommige functionaliteiten kunnen niet worden gebruikt als de oven offline is. Probeer uw oven opnieuw te verbinden.",
+    "CL_DV_OV_combi": "combi",
+    "share_account": "GEDEELDE ACCOUNTS",
+    "CL_CF_CS_bio24_creft_setup_setp1": "Zet uw oven aan. Druk op de drie puntjes **** in de linkerhoek van het ovendisplay om het Direct Access Menu te openen.",
+    "CL_CF_CS_bio24_creft_setup_setp2": "Open het menu Instellingen door op het ****-pictogram aan de rechterkant te drukken.",
+    "CL_CF_CS_bio24_creft_setup_setp3": "Scroll naar beneden in het menu Instellingen totdat u ''CONNECT'' ziet. Druk op om het CONNECT-menu te openen.",
+    "CL_CF_CS_bio24_creft_setup_setp4": "Druk op ''OVEN AANSLUITEN''.",
+    "CL_CF_CS_bio24_creft_setup_setp5": "Druk op de wisselknop aan de rechterkant om Wi-Fi IN te schakelen.",
+    "CL_CF_CS_bio24_creft_setup_setp6": "Er verschijnt een knop ''CONNECT''. Druk op de knop. U kunt nu verdergaan in de app door op de onderstaande knop NEXT te tikken.",
+    "CL_CF_CS_bio24_creft_pair_step4": "Klik op 'GEBRUIKER VERBINDEN'.",
+    "CL_CF_CS_bio24_creft_pair_step5": "Druk op de knop ''PAIR''.",
+    "CL_CF_CS_bio24_creft_pair_step6": "Er begint een aftelling. Je kunt nu verdergaan in de app door op de onderstaande VOLGENDE knop te tikken.",
+    "CL_CF_CS_bio24_elements_setup_step1": "Zet uw oven aan. Open het menu Instellingen door op het ****-pictogram in de linkerbovenhoek te drukken.",
+    "CL_CF_CS_bio24_elements_setup_step2": "Scroll naar beneden in het menu Instellingen totdat u ''Connectiviteit'' ziet. Druk op om het menu Connectiviteit te openen.",
+    "CL_CF_CS_bio24_elements_setup_step3": "Druk op ''CONNECT OVEN'' aan de linkerkant. Wanneer het menu opent, druk op de toggle-knop aan de rechterkant om Wi-Fi in te schakelen.",
+    "CL_CF_CS_bio24_elements_setup_step4": "Er verschijnt een knop ''CONNECT''. Druk op de knop. U kunt nu verdergaan in de app door op de onderstaande knop NEXT te tikken.",
+    "CL_CF_CS_bio24_elements_pair_step3": "Druk op ''CONNECT USER'' aan de linkerkant. Wanneer het menu opent, druk op de ''PAIR'' knop. U kunt nu verdergaan in de app door te tikken op de NEXT knop hieronder.",
+    "CL_DV_RF_scan_login_code_invalid": "Ongeldige QR-inlogcode!"
 }
